# pdf-scrapping

./: .gitignore  Cargo.toml  README.md  main.py  meta-reader.py  output_case.txt
documentation/: README.md
src/: main.rs  note-for-tomorow.md  pdf_to_png.rs
