[package]
name = "tesseract-with-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
color-eyre = "0.6.2"
image = "0.24.6"
pdfium-render = "0.8.6"
rand = "0.8.5"
rusty-tesseract = "1.1.5"
